Lisätty Post-metodi, jolla voi lisätä koira tietokantaan, Friddlen-avulla (toistaiseksi). Muutettu Get-metodia siten, että jos haluttua koiraa ei löydy, antaa muokatun virheilmoituksen.

--- a/Koirat1/Views/Shared/_Layout.cshtml
+++ b/Koirat1/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    <input id="Text1" type="text" />
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
